# DrHeader

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pypi_description.md  README.md  RELEASING.md  RULES.md  SECURITY.md  drheader.rst  modules.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  pull_request.yml  pull_request_master.yml  pull_request_no_master.yml  pythonpackage.yml  release.yml
docs/: Makefile  conf.py  contributing.rst  drheader.rst  history.rst  index.rst  installation.rst  make.bat  readme.rst  usage.rst
drheader/: __init__.py  cli.py  cli_utils.py  core.py  report.py  rules.yml  utils.py  validator.py
drheader/cli/: cli.py  utils.py
drheader/resources/: bulk_compare_schema.json  bulk_scan_schema.json  delimiters.json  rules.yml
drheader/validators/: base.py  cookie_validator.py  directive_validator.py  header_validator.py
tests/: test_cli_utils.py  test_drheader.py  test_utils.py
tests/bulk_files/: bulk_headers.json
tests/integration_tests/: test_base.py  test_cli.py  test_drheader.py  test_rules.py  utils.py
tests/test_resources/: bulk_scan.json  bulk_scan.txt  custom_rules.yml  custom_rules_merged.yml  default_rules.yml  headers_bulk_ko.json  headers_bulk_ok.json  headers_ko.json  headers_ok.json  report.json
tests/testfiles/: custom_rules.yml  default_rules.yml  (+5 more)
(+7 files in other folders)
